[package]
name = "rust-demo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.65"
fantoccini = { version = "0.19.3", features = ["rustls-tls"] }
html-escape = "0.2.11"
scraper = "0.13.0"
tokio = { version = "1.21.2", features = ["full"] }
